fix icons on quicklinks being cut off

--- a/client/my-sites/customer-home/cards/actions/quick-links/style.scss
+++ b/client/my-sites/customer-home/cards/actions/quick-links/style.scss
@@ -37,10 +37,12 @@
 	display: flex;
 	align-items: center;
 	transition: all 0.1s;
-	padding: 8px 16px;
+	padding-top: 8px;
+	padding-bottom: 8px;
+	padding-left: 16px;
 	box-shadow: none;
 	@include breakpoint-deprecated( '>660px' ) {
-		padding: 8px 24px;
+		padding-left: 24px;
 	}
 
 	.quick-links__action-box-image {
